--- a/packages/mrm-ts/tsconfig.json
+++ b/packages/mrm-ts/tsconfig.json
@@ -12,6 +12,7 @@
     ],
     "declaration": true,
     "sourceMap": true,
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "removeComments": true,
